Tried to prevent Japanese common names from getting vertically cropped in obs search grid view

--- a/app/assets/stylesheets/observations/search.scss
+++ b/app/assets/stylesheets/observations/search.scss
@@ -187,7 +187,7 @@ inat-taxon.split-taxon .secondary-name {
 
 #result-grid inat-taxon.split-taxon .display-name {
   font-size: 18px;
-  line-height: 18px;
+  line-height: 22px;
 }
 #result-grid inat-taxon.split-taxon .has-com-name .secondary-name {
   line-height: 26px;
